--- a/main.tex
+++ b/main.tex
@@ -100,7 +100,6 @@
 
 
 
-
 \begin{document}
 %定义所有的eps文件在 figures 子目录下
 \graphicspath{{figures/}}
@@ -127,8 +126,9 @@
 %%% 结论
 \input{body/chapter/intro.tex}
 \input{body/chapter/overview.tex}
-\input{body/chapter/cnn.tex}
-% \input{body/chapter/univ.tex}
+\input{body/chapter/cnn1.tex}
+\input{body/chapter/cnn2.tex}
+\input{body/chapter/conclusion.tex}
 
 %%% 致谢
 \include{body/chapter/ack.tex}
